--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <html>
    <head>
        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-       <title>My blog</title>
+       <title>吴小彪的博客</title>
+       <link rel="stylesheet" type="text/css" href="resource/css/style.css">
    </head>
    <body>
    {{content }}
