--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,23 +5,23 @@
 	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<title>{{ site.title }}</title>
+	<title>{{ page.title }} {{ site.title }}</title>
 
-	<link rel="stylesheet" type="text/css" href="resource/css/main.css">
-	<link rel="stylesheet" type="text/css" href="resource/iconfont/iconfont.css">
-	<link rel="shortout icon" href="resource/image/Blog.png">
-
-	<script type="text/javascript" src="resource/js/main.js"></script>
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/resource/css/main.css">
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/resource/iconfont/iconfont.css">
+	<link rel="shortout icon" href="{{ site.baseurl }}/resource/image/Blog.png">
+	
+	<script type="text/javascript" src="{{ site.baseurl }}/resource/js/main.js"></script>
 </head>
 <body>
 <div class="container" id="container">
 	<header class="topHeader">
 		<div class="comWidth">
-			<a class="logo" href="index.html"><img src="resource/image/Blog.png" width="80" height="80"></a>
+			<a class="logo" href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/resource/image/Blog.png" width="80" height="80"></a>
 			<ul class="topNav">
-				<li><a href="index.html">首页</a>  <!-- 不写li结束标签是为了解决inline-block元素之间的空格解析 -->
-				<li><a href="###">笔记</a>
-				<li><a href="###">随感</a>
+				<li><a href="{{ site.baseurl }}/index.html">首页</a>  <!-- 不写li结束标签是为了解决inline-block元素之间的空格解析 -->
+				<li><a href="{{ site.baseurl }}/category.html">分类</a>
+				<li><a href="{{ site.baseurl }}/archives.html">归档</a>
 				<li><a href="###">关于</a></li>	<!-- 最后一个li的结束标签要写上，是为了兼容IE6 -->
 			</ul>
 		</div>
@@ -36,21 +36,21 @@
 			<aside class="sidebar" id="sidebar">
 				<div class="sidewarper">
 					<div class="portrait"></div>
-					<p>花落无痕，叶无声。</p>
+					<p>落花无痕，流水有意。</p>
 					<div class="branches">
-						<a href="">
-							<span>222</span>
+						<a href="{{ site.baseurl }}/archives.html">
+							<span class="biger_span">{{ site.posts | size }}</span>
 							<span>文章</span>
 						</a>	
 					</div><div class="branches">
-						<a href="">
-							<span>222</span>
-							<span>文章</span>
+						<a href="{{ site.baseurl }}/category.html">
+							<span class="biger_span">{{ site.categories | size }}</span>
+							<span>分类</span>
 						</a>	
 					</div><div class="branches lastbranch">
 						<a href="">
-							<span>222</span>
-							<span>文章</span>
+							<span class="biger_span">0</span>
+							<span>友链</span>
 						</a>	
 					</div>
 
@@ -70,7 +70,7 @@
     </footer>
 
 	<div class="fix_toggle" id="fix_toggle">
-		<span class="hide_toggle" title="展开个人信息" id="hide_toggle">&#xe61b;</span>
+		<span class="hide_toggle" title="隐藏个人信息" id="hide_toggle">&#xe61a;</span>
 		<span class="back_to_top" id="back_top" title="回到顶部">&#xe615;</span>
 	</div>
 </div>
