--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,14 +6,14 @@ layout: default
 <div class="post-body">
  	<header>
 		<h1>{{ page.title }}</h1>	
-		<span class="post-date">{{ page.date | date_to_string }}  |  分类于<a href="###" class="post-cate">{{ page.category }}</a></span>
+		<span class="post-date">{{ page.date | date_to_string }}  |  分类于<a href="{{ site.baseurl }}/category.html#{{ post.category }}" class="post-cate">{{ page.category }}</a></span>
  	</header>
 	
 	<article>
 		{{ content }}
 	</article>
 
-	<div class="pagination">
+	<div class="changepageBar">
 	  {% if page.previous %}
 	  <span class="fl"><a href="{{page.previous.url}}" class="changepage"><i class="page-icon">&#xe617;</i>{{page.previous.title}}</a></span>
 	  {%endif%} 
