--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 <div class="post-body">
  	<header>
 		<h1>{{ page.title }}</h1>	
-		<span class="post-date">{{ page.date | date_to_string }}  |  分类于<a href="{{ site.baseurl }}/category.html#{{ post.category }}" class="post-cate">{{ page.category }}</a></span>
+		<span class="post-date">{{ page.date | date_to_string }}  |  分类于<a href="/category/index.html#{{ post.category }}" class="post-cate">{{ page.category }}</a></span>
  	</header>
 	
 	<article>
