--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,3 +1,3 @@
-<p><small>Designed by <a href="https://github.com/zibiaowu" target = "_blank">Zibiao</a> | Free hosted at <a target = "_blank" href="https://github.com/zibiaowu/zibiaowu.github.io">GitHub</a> | &copy; Copyright 2016 - {{site.time | date:"%Y"}}  
+<p><small>Designed by <a href="https://github.com/zibiaowu" target = "_blank">Zibiao</a> | Free hosted at <a target = "_blank" href="https://github.com/zibiaowu/zibiaowu.github.io">GitHub</a> | &copy; Copyright <!-- 2016 - --> {{site.time | date:"%Y"}}  
 										</p>
 
