--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="/resource/css/main.css">
 	<link rel="stylesheet" type="text/css" href="/resource/css/pygments.css">
 	<link rel="stylesheet" type="text/css" href="/resource/iconfont/iconfont.css">
-	<link rel="shortout icon" href="{{ site.baseurl }}/resource/image/Blog.png">
+	<link rel="shortout icon" href="/resource/image/Blog.png">
 	
 	<script type="text/javascript" src="/resource/js/main.js"></script>
 </head>
@@ -20,13 +20,15 @@
 <div class="all-container" id="container">
 	<header class="topHeader">
 		<div class="comWidth">
-			<a class="logo" href="index.html"><img src="/resource/image/Blog.png" width="80" height="80"></a>
+		<nav>
+			<a class="logo" href="/index.html" title="回到首页"><img src="/resource/image/Blog.png" width="80" height="80" alt="易仙居logo"></a>
 			<ul class="topNav">
 				<li><a href="/index.html">首页</a>  <!-- 不写li结束标签是为了解决inline-block元素之间的空格解析 -->
 				<li><a href="/category/index.html">分类</a>
 				<li><a href="/archives/index.html">归档</a>
 				<li><a href="###">关于</a></li>	<!-- 最后一个li的结束标签要写上，是为了兼容IE6 -->
 			</ul>
+		</nav>
 		</div>
 	</header>
 
