add about and body_bg

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 				<li><a href="/index.html">首页</a>  <!-- 不写li结束标签是为了解决inline-block元素之间的空格解析 -->
 				<li><a href="/category/index.html">分类</a>
 				<li><a href="/archives/index.html">归档</a>
-				<li><a href="###">关于</a></li>	<!-- 最后一个li的结束标签要写上，是为了兼容IE6 -->
+				<li><a href="/about/index.html">关于</a></li>	<!-- 最后一个li的结束标签要写上，是为了兼容IE6 -->
 			</ul>
 		</nav>
 		</div>
@@ -53,9 +53,9 @@
 							<span>分类</span>
 						</a>	
 					</div><div class="branches lastbranch">
-						<a href="">
-							<span class="biger_span">0</span>
-							<span>友链</span>
+						<a href="/about/index.html">
+							<span class="biger_span iconfont">&#xe600;</span>
+							<span>留言</span>
 						</a>	
 					</div>
 
