--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,3 +1,13 @@
-<p><small>Designed by <a href="https://github.com/zibiaowu" target = "_blank">Zibiao</a> | Free hosted at <a target = "_blank" href="https://github.com/zibiaowu/zibiaowu.github.io">GitHub</a> | &copy; Copyright <!-- 2016 - --> {{site.time | date:"%Y"}}  
-										</p>
+<p>
+<small>Designed by <a href="https://github.com/zibiaowu" target = "_blank">Zibiao</a> | Free hosted at <a target = "_blank" href="https://github.com/zibiaowu/zibiaowu.github.io">GitHub</a> | &copy; Copyright <!-- 2016 - --> {{site.time | date:"%Y"}} </small>
+</p>
 
+<p><small><span id="showDays"></span></small></p>
+
+<script>
+	var birthDay = new Date("05/31/2016");
+	var now = new Date();
+	var duration = now.getTime() - birthDay.getTime();
+	var total= Math.floor(duration / (1000 * 60 * 60 * 24));
+	document.getElementById("showDays").innerHTML = "本站已运行 " + total + " 天";
+</script>
