--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -24,10 +24,10 @@ a:hover{text-decoration: none;}
 input{border: none;outline: none;}
 
 pre {font-family: "Courier 10 Pitch", Courier, monospace;font-size: 95%;line-height: 140%;
-white-space: pre;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -o-pre-wrap;}       
+white-space: pre;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -o-pre-wrap;margin: 20px 10px;}       
 
 code {font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;font-size: 95%;line-height: 140%;
-white-space: pre;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -o-pre-wrap;background: #faf8f0;}
+white-space: pre;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -o-pre-wrap;background: #faf8f0;margin: 20px 10px;}
 
 table{border-top:2px solid #777;border-bottom: 2px solid #777;margin: 8px 0;}
 table thead{border-bottom: 1px dashed #777;background-color: #aaa;color:#fff;}
@@ -35,16 +35,13 @@ table th{padding: 2px 10px;}
 table tr:nth-child(2n){background-color: #E5EAED;}
 table td{padding: 2px 10px;vertical-align: top;}
 
-/*em,strong{color: red;}*/
-
 /*default页面*/
-
+body{background-image: url(../image/bg.jpg);background-attachment:fixed;background-repeat: no-repeat;}
 /*@@ 实现footer固定于页面底部*/
 html,body{height:100%;}
-body{background-image: url(../image/bg.jpg);background-attachment:fixed;background-repeat: no-repeat;}
 
 .all-container{min-height:100%;position: relative;}
-.main,.content{padding-bottom:45px;}
+.main,.content{padding-bottom:80px;}
 /*@@ end*/
 
 /*顶部导航*/
@@ -71,8 +68,8 @@ body{background-image: url(../image/bg.jpg);background-attachment:fixed;backgrou
 .links li a{color: rgb(120,120,120);font-weight: bold;border-bottom: 1px dotted rgb(120,120,120);padding:5px 0;}
 .links li a:hover{color:rgb(238,238,238);}
 
-footer{background: rgb(245,245,245);height:40px;bottom:0;position: absolute;width: 100%;}
-footer p{text-align: center;line-height:40px;}
+footer{background: rgb(245,245,245);height:70px;bottom:0;position: absolute;width: 100%;padding:10px 0;}
+footer p{text-align: center;line-height:30px;}
 footer a{color: red;padding: 5px;font-weight: bold;}
 footer a:hover{background: rgb(113,113,113);border-radius: 8px;}
 
