--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
 
 		</div>
 	</div>
-
+	
 	<footer id="footer">
         {% include copyright.html %}
     </footer>
@@ -78,6 +78,20 @@
 		<span class="hide_toggle iconfont" title="隐藏个人信息" id="hide_toggle">&#xe61a;</span>
 		<span class="back_to_top iconfont" id="back_top" title="回到顶部">&#xe615;</span>
 	</div>
+
+	<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+	<script type="text/javascript">
+	var duoshuoQuery = {short_name:"zibiaowu"};
+		(function() {
+			var ds = document.createElement('script');
+			ds.type = 'text/javascript';ds.async = true;
+			ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+			ds.charset = 'UTF-8';
+			(document.getElementsByTagName('head')[0] 
+			 || document.getElementsByTagName('body')[0]).appendChild(ds);
+		})();
+		</script>
+	<!-- 多说公共JS代码 end -->
 </div>
 </body>
 </html>
