--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,3 +22,7 @@ layout: default
 	  {%endif%}
 	</div>
 </div>
+
+<!-- 多说评论框 start -->
+<div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}"></div>
+<!-- 多说评论框 end -->
