add visit count

--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,8 +1,15 @@
+
+<!-- 版权 -->
 <p>
 <small>Designed by <a href="https://github.com/zibiaowu" target = "_blank">Zibiao</a> | Free hosted at <a target = "_blank" href="https://github.com/zibiaowu/zibiaowu.github.io">GitHub</a> | &copy; Copyright <!-- 2016 - --> {{site.time | date:"%Y"}} </small>
 </p>
 
-<p><small><span id="showDays"></span></small></p>
+<!-- 网站运行时间及访问量统计 -->
+<p><small><span id="showDays"></span> | <span id="busuanzi_container_site_pv">
+    本站总访问量<span id="busuanzi_value_site_pv"></span>次
+</span></small></p>
+
+<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
 <script>
 	var birthDay = new Date("05/31/2016");
