--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,12 @@
 			</div>
 
 			<aside class="sidebar" id="sidebar">
-				<div class="sidewarper">
+				<ul class="sidebar-nav">
+					<li class="sidebar-nav-toc" id="sidebar-nav-1">文章目录</li>
+					<li class="sidebar-nav-toc" id="sidebar-nav-2">站点概览</li>
+				</ul>
+
+				<div class="sidewarper" id="sidebar-Person">
 					<div class="portrait"></div>
 					<p>落花无痕，流水有意。</p>
 					<div class="branches">
@@ -75,8 +80,8 @@
     </footer>
 
 	<div class="fix_toggle" id="fix_toggle">
-		<span class="hide_toggle iconfont" title="隐藏个人信息" id="hide_toggle">&#xe61a;</span>
 		<span class="back_to_top iconfont" id="back_top" title="回到顶部">&#xe615;</span>
+		<span class="hide_toggle iconfont" title="隐藏个人信息" id="hide_toggle">&#xe61a;</span>
 	</div>
 
 	<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
