--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 		<span class="post-date">{{ page.date | date_to_string }}  |  分类于<a href="/category/index.html#{{ post.category }}" class="post-cate">{{ page.category }}</a></span>
  	</header>
 	
-	<article>
+	<article id="post_main">
 		{{ content }}
 	</article>
 
