--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -11,10 +11,12 @@ body {font-size:16px;word-spacing:1px;color:#000000;background-color:#ffffff;
 font-family:Trebuchet,"Trebuchet MS",Tahoma,"Lucida Grande","Lucida Sans Unicode","Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei",Verdana,sans-serif;}
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { margin:0; padding:0;} 
 
-h1 {font-size: 28px;line-height: 28px;padding: 28px 0 28px 0;}
-h2 {font-size: 26px;line-height: 48px;padding: 24px 0 24px 0;font-weight: bold;}
-h3 {font-size: 18px;line-height: 24px;padding:20px 0 20px 0;font-weight: bold;}
-h4 {font-size: 16px;line-height: 12px;padding:16px 0 16px 0;font-weight: bold;}
+h1 {font-size: 28px;line-height: 28px;padding: 28px 0 28px 0;font-weight: bold;}
+h2 {font-size: 22px;line-height: 22px;padding: 22px 0 22px 0;font-weight: bold;}
+h3 {font-size: 18px;line-height: 18px;padding:18px 0 18px 0;font-weight: bold;}
+
+/*h1,h2标题会被博客目录JS所收集，此标题大小与h2一样，但是不会被JS收集*/
+h4 {font-size: 24px;line-height: 22px;padding:22px 0 22px 0;font-weight: bold;}
 
 article p{text-indent: 2em;line-height: 200%;}
 
@@ -34,7 +36,8 @@ table thead{border-bottom: 1px dashed #777;background-color: #aaa;color:#fff;}
 table th{padding: 2px 10px;}
 table tr:nth-child(2n){background-color: #E5EAED;}
 table td{padding: 2px 10px;vertical-align: top;}
-
+dl dt{font-weight: normal;font-size: 16px;line-height: 16px;}
+dl dd{font-weight: normal;font-size: 12px;line-height: 12px;}
 /*default页面*/
 body{background-image: url(../image/bg.jpg);background-attachment:fixed;background-repeat: no-repeat;}
 /*@@ 实现footer固定于页面底部*/
@@ -53,9 +56,22 @@ html,body{height:100%;}
 .topNav li a{color:rgb(105,105,105);font-weight: bold;}
 .topNav li:hover,.active{background:rgb(225,225,225);}
 
+
 .sidebar{background:rgb(35,35,35);position:fixed;right:-350px;top:0;bottom:0;width:350px;}
-.sidewarper{position: relative;z-index:1;text-align: center;}
-.portrait{background-image:url(../image/portrait.jpg);height:100px;width: 100px;border-radius: 50%;margin:80px auto 30px;}
+/*博客目录及个人简介切换*/
+.sidebar-nav{margin:50px auto;width: 150px;}
+.sidebar-nav-toc{display: inline-block;font-size: 16px;color: rgb(85,85,85);cursor: pointer;padding:0 3px 2px;}
+.sidebar-nav-toc:hover{color: rgb(199,199,199);}
+.sidebar-nav-toc-active{border-bottom: 2px solid rgb(115,218,255);color:rgb(115,218,255);font-size: 16px;padding:0 3px 2px;display: inline-block;cursor: pointer;}
+/*博客正文目录*/
+.sideBarDirectory{margin:60px 40px 0;}
+.sideBarDirectory dt,.sideBarDirectory dd{color:rgb(199,199,199);cursor: pointer;margin-top:10px;}
+.sideBarDirectory dt:hover,.sideBarDirectory dd:hover{color: rgb(115,218,255);}
+.sideBarDirectory dd{text-indent: 2em;}
+.sideBarDirectory p{text-align: center;color:rgb(199,199,199);margin-top:10px;}
+/*个人简介侧栏*/
+.sidewarper{position: relative;text-align: center;}
+.portrait{background-image:url(../image/portrait.jpg);height:100px;width: 100px;border-radius: 50%;margin:40px auto 30px;}
 .sidewarper p{margin: 60px auto 0;color:rgb(211,211,211);font-weight: bold;font-size: 20px;}
 .branches{display: inline-block;margin: 50px 0;border-right:1px solid rgb(50,50,50);padding: 0 10px;}
 .lastbranch{border: none;}
@@ -68,13 +84,14 @@ html,body{height:100%;}
 .links li a{color: rgb(120,120,120);font-weight: bold;border-bottom: 1px dotted rgb(120,120,120);padding:5px 0;}
 .links li a:hover{color:rgb(238,238,238);}
 
-footer{background: rgb(245,245,245);height:72px;bottom:0;position: absolute;width: 100%;padding:10px 0;}
+footer{background: rgba(245,245,245,0.8);height:72px;bottom:0;position: absolute;width: 100%;padding:10px 0;}
 footer p{text-align: center;line-height:30px;}
 footer a{color: red;padding: 5px;font-weight: bold;}
 footer a:hover{background: rgb(113,113,113);border-radius: 8px;}
 
-.hide_toggle{line-height:20px;position: fixed;bottom:55px;right:15px;color: white;background:rgb(35,35,35);padding:5px;cursor: pointer;}
-.back_to_top{line-height:20px;display:none;position: fixed;bottom:90px;right:15px;color: white;background:rgb(35,35,35);padding:5px;cursor: pointer;}
+.fix_toggle{position: fixed;width:30px;bottom:90px;right:5px;}
+.hide_toggle{line-height:20px;font-size:20px;width:30px;color: white;background:rgb(35,35,35);padding:5px;cursor: pointer;margin-top:5px;display: inline-block;}
+.back_to_top{line-height:20px;font-size:20px;width:30px;color: white;background:rgb(35,35,35);padding:5px;cursor: pointer;display: inline-block;}
 
 .pagination{margin: 0 auto;}
 
