--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -59,10 +59,10 @@ html,body{height:100%;}
 
 .sidebar{background:rgb(35,35,35);position:fixed;right:-350px;top:0;bottom:0;width:350px;}
 /*博客目录及个人简介切换*/
-.sidebar-nav{margin:50px auto;width: 150px;}
-.sidebar-nav-toc{display: inline-block;font-size: 16px;color: rgb(85,85,85);cursor: pointer;padding:0 3px 2px;}
+.sidebar-nav{margin:50px auto;width: 170px;}
+.sidebar-nav-toc{display: inline-block;font-size: 16px;color: rgb(85,85,85);cursor: pointer;padding:0 5px 0;margin: 0 5px;}
 .sidebar-nav-toc:hover{color: rgb(199,199,199);}
-.sidebar-nav-toc-active{border-bottom: 2px solid rgb(115,218,255);color:rgb(115,218,255);font-size: 16px;padding:0 3px 2px;display: inline-block;cursor: pointer;}
+.sidebar-nav-toc-active{border-bottom: 2px solid rgb(115,218,255);color:rgb(115,218,255);font-size: 16px;padding:0 5px 0;display:inline-block;cursor:pointer;margin:0 5px;}
 /*博客正文目录*/
 .sideBarDirectory{margin:60px 40px 0;}
 .sideBarDirectory dt,.sideBarDirectory dd{color:rgb(199,199,199);cursor: pointer;margin-top:10px;}
@@ -71,7 +71,7 @@ html,body{height:100%;}
 .sideBarDirectory p{text-align: center;color:rgb(199,199,199);margin-top:10px;}
 /*个人简介侧栏*/
 .sidewarper{position: relative;text-align: center;}
-.portrait{background-image:url(../image/portrait.jpg);height:100px;width: 100px;border-radius: 50%;margin:40px auto 30px;}
+.portrait{background-image:url(../image/portrait.jpg);height:100px;width: 100px;border-radius: 50%;margin:60px auto 30px;}
 .sidewarper p{margin: 60px auto 0;color:rgb(211,211,211);font-weight: bold;font-size: 20px;}
 .branches{display: inline-block;margin: 50px 0;border-right:1px solid rgb(50,50,50);padding: 0 10px;}
 .lastbranch{border: none;}
