--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta name="baidu-site-verification" content="pzD7xuoBgw" />
+	
 	<title>{{ page.title }} {{ site.title }}</title>
 	
 	<link rel="stylesheet" type="text/css" href="/resource/css/bootstrap.min.css">
