--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="baidu-site-verification" content="pzD7xuoBgw" />
-	
+
 	<title>{{ page.title }} {{ site.title }}</title>
 	
 	<link rel="stylesheet" type="text/css" href="/resource/css/bootstrap.min.css">
@@ -29,6 +29,18 @@
 				<li><a href="/archives/index.html">归档</a>
 				<li><a href="/about/index.html">关于</a></li>	<!-- 最后一个li的结束标签要写上，是为了兼容IE6 -->
 			</ul>
+
+			<!-- 百度站内搜索 -->
+			<script type="text/javascript">
+				(function(){
+					document.write(unescape('%3Cdiv id="bdcs"%3E%3C/div%3E'));
+					var bdcs = document.createElement('script');
+					bdcs.type = 'text/javascript';
+					bdcs.async = true;
+					bdcs.src = 'http://znsv.baidu.com/customer_search/api/js?sid=11990796991200480138' + '&plate_url=' + encodeURIComponent(window.location.href) + '&t=' + Math.ceil(new Date()/3600000);
+					var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(bdcs, s);})();
+			</script>
+
 		</nav>
 		</div>
 	</header>
