--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,27 +21,18 @@
 <div class="all-container" id="container">
 	<header class="topHeader">
 		<div class="comWidth">
-		<nav>
-			<a class="logo" href="/index.html" title="回到首页"><img src="/resource/image/Blog.png" width="80" height="80" alt="易仙居logo"></a>
-			<ul class="topNav">
-				<li><a href="/index.html">首页</a>  <!-- 不写li结束标签是为了解决inline-block元素之间的空格解析 -->
-				<li><a href="/category/index.html">分类</a>
-				<li><a href="/archives/index.html">归档</a>
-				<li><a href="/about/index.html">关于</a></li>	<!-- 最后一个li的结束标签要写上，是为了兼容IE6 -->
-			</ul>
+			<nav>
+				<a class="logo" href="/index.html" title="回到首页"><img src="/resource/image/Blog.png" width="80" height="80" alt="易仙居logo"></a>
+				<ul class="topNav">
+					<li><a href="/index.html">首页</a>  <!-- 不写li结束标签是为了解决inline-block元素之间的空格解析 -->
+					<li><a href="/category/index.html">分类</a>
+					<li><a href="/archives/index.html">归档</a>
+					<li><a href="/about/index.html">关于</a></li>	<!-- 最后一个li的结束标签要写上，是为了兼容IE6 -->
+				</ul>
 
-			<!-- 百度站内搜索 -->
-			<script type="text/javascript">
-				(function(){
-					document.write(unescape('%3Cdiv id="bdcs"%3E%3C/div%3E'));
-					var bdcs = document.createElement('script');
-					bdcs.type = 'text/javascript';
-					bdcs.async = true;
-					bdcs.src = 'http://znsv.baidu.com/customer_search/api/js?sid=11990796991200480138' + '&plate_url=' + encodeURIComponent(window.location.href) + '&t=' + Math.ceil(new Date()/3600000);
-					var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(bdcs, s);})();
-			</script>
+				<span class="iconfont SearchIcon" id="SearchIcon">&#xe60c;</span><input id="bdcsMain" class="topSearch iconfont" type="text" />
 
-		</nav>
+			</nav>
 		</div>
 	</header>
 
@@ -103,8 +94,19 @@
 			(document.getElementsByTagName('head')[0] 
 			 || document.getElementsByTagName('body')[0]).appendChild(ds);
 		})();
-		</script>
+	</script>
 	<!-- 多说公共JS代码 end -->
 </div>
+
+	<script type="text/javascript">
+	(function(){
+		document.write(unescape('%3Cdiv id="bdcs"%3E%3C/div%3E'));
+		var bdcs = document.createElement('script');
+		bdcs.type = 'text/javascript';
+		bdcs.async = true;
+		bdcs.src = 'http://znsv.baidu.com/customer_search/api/js?sid=11990796991200480138' + '&plate_url=' + encodeURIComponent(window.location.href) + '&t=' + Math.ceil(new Date()/3600000);
+		var s = document.getElementsByTagName('script')[0];
+		s.parentNode.insertBefore(bdcs, s);})();
+	</script>
 </body>
 </html>
