--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 					<li><a href="/about/index.html">关于</a></li>	<!-- 最后一个li的结束标签要写上，是为了兼容IE6 -->
 				</ul>
 
-			<form>
+			<form class="searchForm">
 				<span class="iconfont SearchIcon" id="SearchIcon">&#xe60c;</span><input id="bdcsMain" class="topSearch iconfont" type="text" />
 			</form>
 
