--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -4,7 +4,7 @@
 .fl{float: left;}
 .fr{float: right;}
 .hide{display: none;}
-
+.clear:after,.clear:before{content: "";display: block;clear: both;}
 /*
 html{color:#000;background:#FFF;}*/
 body {font-size:16px;word-spacing:1px;color:#000000;background-color:#ffffff;
@@ -39,27 +39,61 @@ table td{padding: 2px 10px;vertical-align: top;}
 dl dt{font-weight: normal;font-size: 16px;line-height: 16px;}
 dl dd{font-weight: normal;font-size: 12px;line-height: 12px;}
 /*default页面*/
-body{background-image: url(../image/bg.jpg);background-attachment:fixed;background-repeat: no-repeat;}
+body{background-image: url(../image/bg.jpg);background-attachment:fixed;background-repeat:repeat;}
 /*@@ 实现footer固定于页面底部*/
 html,body{height:100%;}
 
 .all-container{min-height:100%;position: relative;}
-.main,.content{padding-bottom:75px;}
+.main,.content{padding-bottom:40px;}
 /*@@ end*/
 
 /*顶部导航*/
 .topHeader{height:140px;background: rgb(245,245,245);}
 .topHeader .comWidth{background: rgb(245,245,245);}
-.topHeader .logo{margin:30px 0 30px 0;width: 80px;height: 80px;display: inline-block;}
-.topNav{display: inline-block;margin:50px 180px 0 100px;vertical-align:top;}
+.topHeader .logo{margin:45px 0 0 50px;width:100px;height:50px;display: inline-block;}
+.topNav{display: inline-block;margin:50px 100px 0 100px;vertical-align:top;}
 .topNav li{display: inline-block;padding:10px 20px;text-align: center;border-radius:20px;}
 .topNav li a{color:rgb(105,105,105);font-weight: bold;}
 .topNav li:hover,.active{background:rgb(225,225,225);}
 
+
+.hidenavBox{position: relative;display:none;}
+
 .searchForm{display: inline-block;}
-.SearchIcon{display:inline-block;line-height: 17px;margin-right: -17px;position: relative;z-index: 1;/*font-weight: bold;*/}
+.SearchIcon{display:inline-block;line-height: 17px;margin-right: -17px;position: relative;z-index: 1;}
 .topSearch{width: 180px;background: rgb(245,245,245);border-bottom: 2px solid rgb(199,199,199);display:inline-block;line-height: 17px;padding:2px 0 2px 20px;}
 .topSearch:focus{border-bottom: 2px solid rgb(34,34,34);}
+
+@media screen and (max-width:830px) and (min-width:670px){
+	.searchForm{margin: 60px 10px 0 0;float: right;}
+	.topSearch{width:150px;}
+	.topHeader .logo{float: left;}
+	.topNav{float:left;margin:50px 10px 0 60px;}}
+
+@media screen and (max-width:670px) and (min-width: 490px){
+	.topNav{float: right;margin:50px 30px 0 0;}
+	.searchForm{display: none;}}
+
+@media screen and (max-width:490px) and (min-width:365px){
+	.searchForm{display: none;}
+	.topHeader .logo{margin:45px 10px 0 20px;}
+	.topNav{float: right;margin: 50px 0 0 10px;}
+	.topNav li{padding:10px 10px;}}
+
+@media screen and (max-width: 365px){
+	.searchForm{display: none;}
+	.topNav{display: none;}
+	.hidenavBox{margin:40px 20px 10px 0;display: inline-block;}
+	.mobilenav-wraper{display: none;position: absolute;left: 20px;}
+	.hidesearchForm{display: inline-block;background: rgb(225,225,225);padding:5px 10px 10px;}
+	.topnavtoggle{display: inline-block;font-size:45px;width:60px;height:60px;padding:0 7px 15px 8px;cursor: pointer;margin:0 0 5px 40px;}
+	.topnavtoggle:hover{background: rgb(225,225,225);}
+	.mobileNav{padding:15px 30px 5px;background: rgb(225,225,225);border: 1px solid rgb(215,215,215);}
+	.mobileNav li{text-align:center;border-bottom: 1px dotted rgb(225,225,225);margin: 3px 0;}
+	.mobileNav li:hover{border-bottom: 1px solid black;}
+	.topSearch{width:80px;background: rgb(225,225,225);}
+
+}
 
 .sidebar{background:rgb(35,35,35);position:fixed;right:-350px;top:0;bottom:0;width:350px;}
 /*博客目录及个人简介切换*/
@@ -88,7 +122,7 @@ html,body{height:100%;}
 .links li a{color: rgb(120,120,120);font-weight: bold;border-bottom: 1px dotted rgb(120,120,120);padding:5px 0;}
 .links li a:hover{color:rgb(238,238,238);}
 
-footer{background: rgba(245,245,245,0.8);height:72px;bottom:0;position: absolute;width: 100%;padding:10px 0;}
+footer{background: rgba(245,245,245,0.8);height:120px;bottom:-83px;position: absolute;width: 100%;padding:20px 0 0 0;}
 footer p{text-align: center;line-height:30px;}
 footer a{color: red;padding: 5px;font-weight: bold;}
 footer a:hover{background: rgb(113,113,113);border-radius: 8px;}
