--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -31,6 +31,8 @@ white-space: pre;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -
 code {font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;font-size: 95%;line-height: 140%;
 white-space: pre;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -o-pre-wrap;background: #faf8f0;margin: 20px 10px;}
 
+img{margin: 20px 0;}
+
 table{border-top:2px solid #777;border-bottom: 2px solid #777;margin: 8px 0;}
 table thead{border-bottom: 1px dashed #777;background-color: #aaa;color:#fff;}
 table th{padding: 2px 10px;}
